--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1,157 +1,6 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# <span style=\"color:#00e5ff; font-weight:700;\">Lucra Science</span>\n",
-    "### <span style=\"color:#f5c045;\">Innovating Tomorrow's Technologies</span>\n",
-    "\n",
-    "Welcome to the **Lucra Science custom-themed Jupyter Notebook**.\n",
-    "\n",
-    "This notebook demonstrates how your **branded theme** looks when rendered on Binder.\n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## <span style=\"color:#f5c045;\">1. Markdown Block Styling</span>\n",
-    "\n",
-    "This is a sample markdown cell. Notice how the background, borders, and text colours follow the **Lucra Science dark/navy/cyan/gold theme**.\n",
-    "\n",
-    "**Features shown:**\n",
-    "- Gold header\n",
-    "- White text\n",
-    "- Cyan links (example: [Lucra Science](https://lucrascience.com))\n",
-    "- Smooth Lucra-styled text block\n",
-    "\n",
-    "You can use these cells to create documentation, training modules, marketing demos, or interactive reports."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## <span style=\"color:#f5c045;\">2. Code Cell Styling</span>\n",
-    "Below is a simple Python example which displays Lucra-themed colours in the code area, syntax highlighting, gutter, and output region."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lucra Science Theme Test Successful!\n"
-     ]
-    }
-   ],
-   "source": [
-    "message = \"Lucra Science Theme Test Successful!\"\n",
-    "print(message)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## <span style=\"color:#f5c045;\">3. Data Example</span>\n",
-    "A simple pandas dataframe to demonstrate output styling."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Feature</th>\n",
-       "      <th>Value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Speed</td>\n",
-       "      <td>Fast</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Brand Colour</td>\n",
-       "      <td>Navy / Cyan / Gold</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Quality</td>\n",
-       "      <td>Premium</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Feature              Value\n",
-       "0         Speed               Fast\n",
-       "1  Brand Colour  Navy / Cyan / Gold\n",
-       "2       Quality            Premium"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.DataFrame({\n",
-    "    \"Feature\": [\"Speed\", \"Brand Colour\", \"Quality\"],\n",
-    "    \"Value\": [\"Fast\", \"Navy / Cyan / Gold\", \"Premium\"]\n",
-    "})\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## <span style=\"color:#f5c045;\">4. Footer</span>\n",
-    "\n",
-    "<span style=\"color:#00e5ff; font-weight:600;\">Lucra Science</span> – Engineering Tomorrow’s Innovation.\n",
-    "\n",
-    "Website: https://lucrascience.com\n",
-    "\n",
-    "If you are seeing this on Binder, your **custom theme is working correctly**."
-   ]
-  }
- ],
+ "nbformat": 4,
+ "nbformat_minor": 5,
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
@@ -159,17 +8,87 @@
    "name": "python3"
   },
   "language_info": {
+   "name": "python",
+   "version": "3.10",
+   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10"
+   "file_extension": ".py",
+   "nbconvert_exporter": "python"
   }
  },
- "nbformat": 4,
- "nbformat_minor": 5
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lucra Science Demo Notebook",
+    "",
+    "Welcome to the **Lucra Science** themed notebook running on Binder.",
+    "",
+    "This notebook is just a quick demo to see how your custom Jupyter theme looks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Markdown styling",
+    "",
+    "This is a markdown cell. With your custom theme applied, you should see:",
+    "",
+    "- Dark background",
+    "- Brand colours (navy / cyan / gold)",
+    "",
+    "Try editing this text or adding new markdown cells to see how they look."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Code cell styling",
+    "",
+    "Run the cell below to test code and output styling."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "message = 'Lucra Science Theme Test Successful!'",
+    "print(message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Simple data example",
+    "",
+    "Run the cell below to see a small pandas DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import pandas as pd",
+    "",
+    "df = pd.DataFrame({",
+    "    'Feature': ['Speed', 'Brand Colour', 'Quality'],",
+    "    'Value': ['Fast', 'Navy / Cyan / Gold', 'Premium']",
+    "})",
+    "",
+    "df"
+   ]
+  }
+ ]
+}
