--- a/demo.ipynb
+++ b/demo.ipynb
@@ -21,6 +21,28 @@
   }
  },
  "cells": [
+
+{
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+      "from IPython.display import HTML\n",
+      "HTML(\"\"\"\n",
+      "<style>\n",
+      "body { background-color: #0a152b !important; color: #ffffff !important; }\n",
+      "#notebook, #notebook-container, .container, .jp-Notebook { background-color: #0a152b !important; }\n",
+      "div.text_cell { background-color: #081020 !important; border-left: 3px solid #f5c045 !important; padding: 10px !important; border-radius: 6px; }\n",
+      "div.code_cell .input_area { background-color: #101a33 !important; border-left: 3px solid #00e5ff !important; color: #ffffff !important; }\n",
+      "div.output_wrapper, div.output { background-color: #0b182e !important; color: #ffffff !important; border-radius: 6px; }\n",
+      "h1, h2, h3 { color: #f5c045 !important; }\n",
+      "a { color: #00e5ff !important; }\n",
+      ".lucra-title { font-size: 36px; font-weight: 800; color: #00e5ff; margin-bottom: 10px; }\n",
+      "</style>\n",
+      "\"\"\")"
+   ]
+},
   {
    "cell_type": "markdown",
    "metadata": {},
