--- a/python_ai_nonstem_trial.ipynb
+++ b/python_ai_nonstem_trial.ipynb
@@ -9,6 +9,7 @@
     "# Python Programming & Artificial Intelligence (AI) for Non-STEM\n",
     "## Trial Course Preview by Lucra Science Hub\n",
     "\n",
+    "Copyright Lucra Science Hub 2025 , All Rights Reserved", "\n",
     "Welcome to the trial version of our **Python Programming & Artificial Intelligence (AI) for Non-STEM** course.\n",
     "\n",
     "In this course, you will get hands-on experience using the Jupyter Notebook environment. You will learn to code in Python and run basic machine learning algorithms focused on data analysis.\n",
